# MinecraftOpenGL

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  voxel
.cache/clangd/index/: ChunkGenerator.cpp.4726E55CEE4EA106.idx  Engine.cpp.2C7A01AD82FCFF31.idx  Engine.h.CD4A53EFA64AD3A4.idx  World.cpp.B4B354A01D86D9A0.idx  basicCubeVerts.h.BBC1179E4ED30034.idx  basicVerts.cpp.CB3A571A24183210.idx  basicVerts.h.80CA7631C5A37C8D.idx  camera.h.6728EEA67B1A4A74.idx  chunkData.h.BC8443E0EEE374E4.idx  chunkGenereator.h.C818F242E86E3FB9.idx  filesystem.h.3AB04D41913558F4.idx  glad.c.BCC906746B53034D.idx  glad.h.D8B0F5E8264FD642.idx  khrplatform.h.D187804713701727.idx  main.cpp.3D4E9436FB855A6E.idx  shader.h.C662531EF443EC5E.idx  stb_image.h.3F6EE5C71C7C0B60.idx  texture.h.DA42963295F7E607.idx  world.h.9527C1F64351A5CB.idx
assets/minecraft/blockstates/: acacia_door.json  acacia_fence.json  acacia_fence_gate.json  bamboo_door.json  birch_door.json  birch_fence_gate.json  cherry_planks.json  cherry_slab.json  copper_door.json  copper_torch.json  copper_trapdoor.json  copper_wall_torch.json  crimson_door.json  crimson_fence.json  crimson_fence_gate.json  dark_oak_door.json  dark_oak_fence.json  mangrove_door.json  mangrove_fence.json  mangrove_stairs.json  nether_brick_fence.json  oak_fence_gate.json  (+14 more)
assets/shaders/: lightcube.fs  lightcube.vs
include/: Engine.h  basicVerts.h  camera.h  chunkData.h  filesystem.h  shader.h  texture.h  world.h
include/glad/: glad.h
src/: basicVerts.cpp  glad.c
src/Engine/: Engine.cpp
src/World/: World.cpp
(+737 files in other folders)
